Stop horizontal scroll on mobile

--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -4,8 +4,12 @@
     box-sizing: border-box;
 }
 
-body {
+html, body {
     overflow-x: hidden;
+}
+
+body {
+    position: relative;
 }
 
 .app {
